Fix listed spacing

--- a/frontend/kinnie-playlist/src/elements/character/Song.css
+++ b/frontend/kinnie-playlist/src/elements/character/Song.css
@@ -48,9 +48,10 @@
 }
 
 .Song-track-container {
-    margin-bottom: 10px;
-    display: inline-flex;
+    display: flex;
     width: 100%;
+    height: auto;
+    margin-bottom: 17px;
 }
 
 .Song-cover {
@@ -106,7 +107,7 @@
 }
 
 .spotify-attrib {
-    position: absolute;
+    position: inline-block;
     bottom: 0;
     font-size: 13pt;
     color: black;
