--- a/frontend/kinnie-playlist/src/elements/latest/Vote.css
+++ b/frontend/kinnie-playlist/src/elements/latest/Vote.css
@@ -1,7 +1,7 @@
 .Vote {
     display: flex;
     width: 100%;
-    height: 50px;
+    height: auto;
     margin-bottom: 17px;
 }
 
